src/qt/libqwindow.bf

	[LinkName("QWindow_Connect_ScreenChanged")]
	public static extern void QWindow_Connect_ScreenChanged(void* c_this, c_intptr slot);
	[LinkName("QWindow_Connect_ModalityChanged")]
	public static extern void QWindow_Connect_ModalityChanged(void* c_this, c_intptr slot);
	[LinkName("QWindow_Connect_WindowStateChanged")]
	public static extern void QWindow_Connect_WindowStateChanged(void* c_this, c_intptr slot);
	[LinkName("QWindow_Connect_WindowTitleChanged")]
	public static extern void QWindow_Connect_WindowTitleChanged(void* c_this, c_intptr slot);
	[LinkName("QWindow_Connect_XChanged")]
	public static extern void QWindow_Connect_XChanged(void* c_this, c_intptr slot);
	[LinkName("QWindow_Connect_YChanged")]
	public static extern void QWindow_Connect_YChanged(void* c_this, c_intptr slot);
	[LinkName("QWindow_Connect_WidthChanged")]
	public static extern void QWindow_Connect_WidthChanged(void* c_this, c_intptr slot);
	[LinkName("QWindow_Connect_HeightChanged")]
	public static extern void QWindow_Connect_HeightChanged(void* c_this, c_intptr slot);
	[LinkName("QWindow_Connect_MinimumWidthChanged")]
	public static extern void QWindow_Connect_MinimumWidthChanged(void* c_this, c_intptr slot);
	[LinkName("QWindow_Connect_MinimumHeightChanged")]
	public static extern void QWindow_Connect_MinimumHeightChanged(void* c_this, c_intptr slot);
	[LinkName("QWindow_Connect_MaximumWidthChanged")]
	public static extern void QWindow_Connect_MaximumWidthChanged(void* c_this, c_intptr slot);
	[LinkName("QWindow_Connect_MaximumHeightChanged")]
	public static extern void QWindow_Connect_MaximumHeightChanged(void* c_this, c_intptr slot);
	[LinkName("QWindow_Connect_VisibleChanged")]
	public static extern void QWindow_Connect_VisibleChanged(void* c_this, c_intptr slot);
	[LinkName("QWindow_Connect_VisibilityChanged")]
	public static extern void QWindow_Connect_VisibilityChanged(void* c_this, c_intptr slot);
	[LinkName("QWindow_Connect_ActiveChanged")]
	public static extern void QWindow_Connect_ActiveChanged(void* c_this, c_intptr slot);
	[LinkName("QWindow_Connect_ContentOrientationChanged")]
	public static extern void QWindow_Connect_ContentOrientationChanged(void* c_this, c_intptr slot);
	[LinkName("QWindow_Connect_FocusObjectChanged")]
	public static extern void QWindow_Connect_FocusObjectChanged(void* c_this, c_intptr slot);
	[LinkName("QWindow_Connect_OpacityChanged")]
	public static extern void QWindow_Connect_OpacityChanged(void* c_this, c_intptr slot);
	[LinkName("QWindow_Connect_TransientParentChanged")]
	public static extern void QWindow_Connect_TransientParentChanged(void* c_this, c_intptr slot);
	[LinkName("QWindow_ExposeEvent")]
	public static extern void QWindow_ExposeEvent(void* c_this, void* param1);
	[LinkName("QWindow_ResizeEvent")]
	public static extern void QWindow_ResizeEvent(void* c_this, void* param1);
	[LinkName("QWindow_PaintEvent")]
	public static extern void QWindow_PaintEvent(void* c_this, void* param1);
	[LinkName("QWindow_MoveEvent")]
	public static extern void QWindow_MoveEvent(void* c_this, void* param1);
	[LinkName("QWindow_FocusInEvent")]
	public static extern void QWindow_FocusInEvent(void* c_this, void* param1);
	[LinkName("QWindow_FocusOutEvent")]
	public static extern void QWindow_FocusOutEvent(void* c_this, void* param1);
	[LinkName("QWindow_ShowEvent")]
	public static extern void QWindow_ShowEvent(void* c_this, void* param1);
	[LinkName("QWindow_HideEvent")]
	public static extern void QWindow_HideEvent(void* c_this, void* param1);
	[LinkName("QWindow_CloseEvent")]
	public static extern void QWindow_CloseEvent(void* c_this, void* param1);
	[LinkName("QWindow_Event")]
	public static extern bool QWindow_Event(void* c_this, void* param1);
	[LinkName("QWindow_KeyPressEvent")]
	public static extern void QWindow_KeyPressEvent(void* c_this, void* param1);
	[LinkName("QWindow_KeyReleaseEvent")]
	public static extern void QWindow_KeyReleaseEvent(void* c_this, void* param1);
	[LinkName("QWindow_MousePressEvent")]
	public static extern void QWindow_MousePressEvent(void* c_this, void* param1);
	[LinkName("QWindow_MouseReleaseEvent")]
	public static extern void QWindow_MouseReleaseEvent(void* c_this, void* param1);
	[LinkName("QWindow_MouseDoubleClickEvent")]
	public static extern void QWindow_MouseDoubleClickEvent(void* c_this, void* param1);
	[LinkName("QWindow_MouseMoveEvent")]
	public static extern void QWindow_MouseMoveEvent(void* c_this, void* param1);
	[LinkName("QWindow_WheelEvent")]
	public static extern void QWindow_WheelEvent(void* c_this, void* param1);
	[LinkName("QWindow_TouchEvent")]
	public static extern void QWindow_TouchEvent(void* c_this, void* param1);
	[LinkName("QWindow_TabletEvent")]
	public static extern void QWindow_TabletEvent(void* c_this, void* param1);
	[LinkName("QWindow_NativeEvent")]
	public static extern bool QWindow_NativeEvent(void* c_this, libqt_string eventType, void* message, c_uintptr* result);
	[LinkName("QWindow_Tr2")]
	public static extern libqt_string QWindow_Tr2(char8[] s, char8[] c);
	[LinkName("QWindow_Tr3")]
	public static extern libqt_string QWindow_Tr3(char8[] s, char8[] c, int32 n);
	[LinkName("QWindow_Parent1")]
	public static extern void* QWindow_Parent1(void* c_this, int64 mode);
	[LinkName("QWindow_SetFlag2")]
	public static extern void QWindow_SetFlag2(void* c_this, int64 param1, bool on);
	[LinkName("QWindow_IsAncestorOf2")]
	public static extern bool QWindow_IsAncestorOf2(void* c_this, void* child, int64 mode);
	/// Delete this object from C++ memory
	[LinkName("QWindow_Delete")]
	public static extern void QWindow_Delete(void* self);
}